<resources>
    <string name="app_name">flashcardApp</string>
    <string name="top_5_scores">Top 5 Scores</string>
    <string name="play_again">Play Again?</string>
    <string name="logout">Logout</string>
    <string name="_1st_place">1st Place</string>
    <string name="_2nd_place">2nd Place</string>
    <string name="_5th_place">5th Place</string>
    <string name="_4th_place">4th Place</string>
    <string name="_3rd_place">3rd Place</string>
    <string name="div_operator">÷</string>
    <string name="your_answer">Your Answer:</string>
    <string name="submit">submit</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="signup">Signup</string>
    <string name="dash">-----</string>
</resources>
